<resources>
    <string name="app_name">Cool Weather APP</string>
    <string name="cool_weather_app">Cool Weather APP</string>
    <string name="app">APP</string>
    <string name="Cidade">Lisboa</string>
    <string name="Data">TERÇA-FEIRA, 31 DE MARÇO</string>
    <string name="Temperatura">30°</string>
    <string name="Tempo"><![CDATA[SUNNY & CLEAR]]></string>
    <string name="Humidade">HUMIDITY</string>
    <string name="PercentagemHumidade">45%</string>
    <string name="Vento">WIND</string>
    <string name="Velo_Vento">15 km/h</string>
    <string name="latitude">LATITUDE</string>
    <string name="longitude">LONGITUDE</string>
    <string name="sea_level_pressure">SEA LEVEL PRESSURE</string>
    <string name="wind_direction">WIND DIRECTION</string>
    <string name="wind_speed">WIND SPEED</string>
    <string name="time">TIME</string>
    <string name="update">UPDATE</string>
    <string name="input_value">Enter value</string>
    <string name="_45">45%</string>
    <string name="altitude">ALTITUDE</string>
    <string name="pressure">PRESSURE</string>
    <string name="uv_index">UV INDEX</string>
    <string name="altitude_value">1200 m</string>
    <string name="latitude_value">38.76°</string>
    <string name="pressure_value">1026.4 hPa</string>
    <string name="wind_direction_value">214°</string>
    <string name="uv_index_value">6</string>
</resources>